--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,8 @@
+/*----- nav INICIO-------*/
+nav{
+    background-color: darkgrey;
+}
+/*----- nav FINAL----------*/
 /*----- header INICIO------ */
 *{
     padding: 0;
@@ -9,6 +14,7 @@
     grid-template-columns: 50% 50%;
 }
 #logo img{
+    border: 3px solid rgb(88, 85, 85);
     width: 100px;
     height: 100px;
 }
@@ -18,8 +24,54 @@
     text-align: left;
 }
 #textoheader{
+    margin: 15px;
     padding: 10px;
     text-align: right;
+    font-size: 20px;
 }
+#home{
+    padding: 5px;
+    border: 2px solid rgb(88, 85, 85);
+}
+.conteudoMenu a{
+    margin: 15px;
+    color: black;
+    text-decoration: none;
+}
+/*---- header FINAL-------*/
+/*---- main INICIO--------*/
+main{
+    font-family:Didot, Didot LT STD, Hoefler Text, Garamond, Calisto MT, Times New Roman, serif;
+}
+/*---- main FINAL---------*/
+/*---- produto1 INICIO-----*/
+#produto1{
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+#produto1 img{
+    border: 1px solid black;
+    margin: 15px;
+    width: 100%;
+    height: 350px;
+}
+#textosolar{
+    text-align: center;
+}
+/*---- produto1 FINAL------*/
+/*---- produto2 INICIO-----*/
+#produto2{
+    justify-items: center;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    background-color: rgb(255, 255, 0);
+}
+#produto2 img{
+    text-align: center;
+    border: 1px solid black;
+}
+#produto2 p{
+    text-align: center;
+}
+/*---- produto2 FINAL------*/
 
-/*---- header FINAL------- */
