--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,6 +1,5 @@
 /*----- nav INICIO-------*/
 nav{
-    background-color: darkgrey;
 }
 /*----- nav FINAL----------*/
 /*----- header INICIO------ */
@@ -14,7 +13,6 @@ nav{
     grid-template-columns: 50% 50%;
 }
 #logo img{
-    border: 3px solid rgb(88, 85, 85);
     width: 100px;
     height: 100px;
 }
@@ -31,12 +29,14 @@ nav{
 }
 #home{
     padding: 5px;
-    border: 2px solid rgb(88, 85, 85);
 }
 .conteudoMenu a{
     margin: 15px;
     color: black;
     text-decoration: none;
+}
+#textoheader a:houver{
+    
 }
 /*---- header FINAL-------*/
 /*---- main INICIO--------*/
@@ -45,33 +45,11 @@ main{
 }
 /*---- main FINAL---------*/
 /*---- produto1 INICIO-----*/
-#produto1{
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-#produto1 img{
-    border: 1px solid black;
-    margin: 15px;
-    width: 100%;
-    height: 350px;
-}
-#textosolar{
-    text-align: center;
-}
+
 /*---- produto1 FINAL------*/
 /*---- produto2 INICIO-----*/
-#produto2{
-    justify-items: center;
-    display: grid;
-    grid-template-columns: 33% 33% 33%;
-    background-color: rgb(255, 255, 0);
-}
-#produto2 img{
-    text-align: center;
-    border: 1px solid black;
-}
-#produto2 p{
-    text-align: center;
-}
-/*---- produto2 FINAL------*/
 
+/*---- produto2 FINAL------*/
+/*---- procuto 3 INICIO---*/
+
+/*---- produto 3 FINAL-----*/
