--- a/css/estilo.css
+++ b/css/estilo.css
@@ -309,6 +309,7 @@ li{
    width: 200px;
    margin-top: 5px;
    border: 3px solid black;
+   margin: 5px;
 }
 .canto{
     margin-left: 50px;
@@ -325,6 +326,15 @@ li{
 .endereco{
     display:flex ;
     justify-content: space-around;
+}
+.nome{
+    font-size: 20px;
+}
+label{
+    text-decoration: none;
+}
+#imgform img{
+    margin: 15px;
 }
 /*----------- formulario FINAL--------- */
 /*-------- linkangular FINAL---------- */
