--- a/css/estiloArcondicionado.css
+++ b/css/estiloArcondicionado.css
@@ -40,11 +40,13 @@ hr{
     justify-content: center;
 }
 .mesmoprodutoimgdiferentes{
+    margin: 15px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     border: 3px solid blue;
 }
 .calcular{
+    border-radius: 15px;
     border: 2px solid green;
     display: grid;
     grid-template-rows: 10vh 20vh;
