--- a/css/estilo.css
+++ b/css/estilo.css
@@ -662,6 +662,28 @@ main{
         display: block;
     } 
 }
+
+/* botao voltar para o topo */
+#btn-voltar-topo {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #4CAF50;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+#btn-voltar-topo:hover {
+    background-color: #555;
+}
+/* botao voltar para o topo */
 /*-------- linkangular FINAL---------- */
 
 
