--- a/css/estilo.css
+++ b/css/estilo.css
@@ -274,6 +274,9 @@ li{
     margin-left: 15px;
     margin-right: 15px;
 }
+.produtos4 img{
+    margin-bottom: 15px;
+}
 #imgproduto4 img{
     margin-top: 6px;
     margin-left: 5px;
@@ -464,12 +467,14 @@ label{
 .icons{
     margin-top: 25px;
     display: flex;
-    padding-left: 500px;
 }
 /*----------- formulario FINAL--------- */
 /* responsivo */
 @media screen and (max-width: 900px) {
- .body{
+ .img1 img{
+    width: 600px;
+ }
+    .body{
     display: block;
 }
 header{
@@ -564,8 +569,16 @@ main{
     width: 15px;
     display: block;
 } 
+.nomeemail{
+    display: block;
+    display: flex;
+  
+}
 }
 @media screen and (max-width: 500px) {
+    .img1{
+        width: 500px;
+    }
     .body{
         display: block;
     }
@@ -609,11 +622,17 @@ main{
     .texto{
         color: yellow;
     }
+    .produto3servico img{
+            width: 100px;
+    }
     .produto3servico{
         display: block;
     }
     .area_servicos{
         display: block;
+    }
+    #sobrenos img{
+        width: 100px;
     }
     .fundocinza{
         display: block;
@@ -661,6 +680,29 @@ main{
         width: 15px;
         display: block;
     } 
+    .icons{
+        display: flex;
+        justify-content: left;
+    }
+.imgfundocinza img{
+    width: 250px;
+}
+.imgform{
+    width: 150px;
+}
+#nomeemail{
+    display: block;
+}
+#Email{
+    width: 100px;
+display: block;
+}
+.inputfieldi{
+    width: 50%;
+}
+#imgform img{
+    width: 100px;
+}
 }
 
 /* botao voltar para o topo */
